--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/web-link": "6.1.*",
         "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "6.1.*",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
