--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,10 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
+                default_target_path: app_series
+            logout:
+                path: app_logout
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -30,7 +34,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/series$, roles: PUBLIC_ACCESS }
+         - { path: ^/(?!login|register), roles: ROLE_USER }
 
 when@test:
     security:
