--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
-.idea
+/.idea
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
