--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,8 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
