--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,9 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+    prefix: /{_locale}
+    requirements:
+        _locale: en|pt_BR
 
 app_logout:
     path: /logout
