--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,5 +1,6 @@
 framework:
     default_locale: pt_BR
+    enabled_locales: ['en', 'pt_BR']
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
